changed color to white

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simple Inline Styled Page</title>
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f0f0f0; color: #333; text-align: center; padding: 20px;">
-    <h1 style="color: black;">Welcome to My Simple Page</h1>
+    <h1 style="color: white;">Welcome to My Simple Page</h1>
     <p style="font-size: 18px; line-height: 1.5;">
         This is a simple HTML page with inline styles. Inline styles are added directly to HTML elements using the <code>style</code> attribute.
     </p>
